[project]
name = "chaos_engine"
version = "1.0.0"
description = """
Chaos Engine is a real-world environment designed to test and benchmark AI agents
in handling complex, dynamic, and unpredictable traffic scenarios. It simulates
urban traffic where agents must create green corridors for emergency vehicles
while minimizing disruption.
"""
authors = [
  { name = "Deepak S" },
  { name = "Aman K" },
  { name = "Ambesh G" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.24.0",
  "requests>=2.31.0",
  "openenv-core>=0.1.13"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
name = "chaos_engine"
description = "Traffic coordination environment for emergency routing"

tags = [
  "openenv",
  "real-world-environment",
  "agent-benchmarking",
  "traffic",
  "emergency-response"
]

[tool.openenv.models]
action = "models.ChaosEngineAction"
observation = "models.ChaosEngineObservation"

[tool.openenv.server]
app = "server.app:app"
port = 7860

[[tool.openenv.tasks]]
id = "green_corridor_easy"
name = "Easy Corridor"
description = "Low traffic, simple path to destination."
difficulty = "easy"

[[tool.openenv.tasks]]
id = "congestion_control_medium"
name = "Congestion Control"
description = "Moderate traffic with obstacles."
difficulty = "medium"

[[tool.openenv.tasks]]
id = "incident_response_hard"
name = "Incident Response"
description = "High traffic with dynamic accidents."
difficulty = "hard"